// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Edit button 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div
        class="css-m84gzu-MuiStack-root"
      >
        <div
          class="css-nen11g-MuiStack-root"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-nyqf5m-MuiTypography-root"
          >
            Saved Schedules
          </h4>
          <div
            class="css-1okj3ks-MuiStack-root"
          />
        </div>
      </div>
    </div>
  </div>
  <script
    defer=""
    src="https://accounts.google.com/gsi/client"
  />
</body>
`;

exports[`Test Redirect 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    />
  </div>
  <script
    defer=""
    src="https://accounts.google.com/gsi/client"
  />
</body>
`;

exports[`Test Render of the account page 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div
        class="css-m84gzu-MuiStack-root"
      >
        <div
          class="css-nen11g-MuiStack-root"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-nyqf5m-MuiTypography-root"
          >
            Saved Schedules
          </h4>
          <div
            class="css-1okj3ks-MuiStack-root"
          />
        </div>
      </div>
    </div>
  </div>
  <script
    defer=""
    src="https://accounts.google.com/gsi/client"
  />
</body>
`;
